[package]
name = "comde"
version = "0.2.2"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
description = "Compression/decompression akin to serde"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/comde"

[dependencies]
delegate = "0.5.1"
brotli = { version = "3.3.0", optional = true }
xz2 = { version = "0.1.6", optional = true }
snap = { version = "1.0.1", optional = true }
flate2 = { version = "1.0.18", optional = true }
zstd = { version = "0.7", optional = true }

[features]
default = ["xz", "snappy", "deflate", "zstandard", "brotli"]
xz = ["xz2"]
snappy = ["snap"]
deflate = ["flate2"]
zstandard = ["zstd"]
