[package]
name = "comde_codegen"
version = "0.0.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
comde = { path = "../comde" }
phf_shared = { git = "https://github.com/sfackler/rust-phf" }
phf_codegen = { git = "https://github.com/sfackler/rust-phf" }
byte_string = "1.0.0"
delegate = "0.2.0"

[dev-dependencies]

[build-dependencies]

[features]
xz = ["comde/xz"]
snappy = ["comde/snappy"]
deflate = ["comde/deflate"]
