[package]
name = "comde_codegen"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
description = "Compression/decompression akin to serde (codegen)"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/comde"

[dependencies]
comde = { version = "0.1.0", path = "../comde" }
phf_shared = "0.7.24"
phf_codegen = "0.7.24"
byte_string = "1.0.0"
delegate = "0.2.0"

[features]
xz = ["comde/xz"]
snappy = ["comde/snappy"]
deflate = ["comde/deflate"]
zstandard = ["comde/zstandard"]
